// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`afterClickInvalid 1`] = `
Object {
  "children": Array [
    <button
      className="btn btn-warning btn-outline"
      onClick={[Function]}
      style={
            Object {
                  "cursor": "pointer",
                }
      }
      type="submit"
>
      <span>
            <i
                  className="fa fa-warning"
                  style={
                        Object {
                              "marginRight": "5px",
                            }
                  }
            />
      </span>
      Invalid
</button>,
    false,
  ],
}
`;

exports[`beforeClickInvalid 1`] = `
Object {
  "children": Array [
    <button
      className="btn btn-primary btn-outline"
      onClick={[Function]}
      style={
            Object {
                  "cursor": "pointer",
                }
      }
      type="submit"
>
      <span>
            <i
                  className="fa fa-paper-plane-o"
                  style={
                        Object {
                              "marginRight": "5px",
                            }
                  }
            />
      </span>
      Submit
</button>,
    false,
  ],
}
`;

exports[`errorAlert 1`] = `
<div>
  <button
    className="btn btn-primary "
    onClick={[Function]}
    style={Object {}}
    type="submit"
  >
    <span>
      <i
        className="fa fa-paper-plane-o"
        style={
          Object {
            "marginRight": "5px",
          }
        }
      />
    </span>
    Submit
  </button>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <button
    className="btn btn-primary "
    onClick={[Function]}
    style={Object {}}
    type="submit"
  >
    <span>
      <i
        className="fa fa-paper-plane-o"
        style={
          Object {
            "marginRight": "5px",
          }
        }
      />
    </span>
    Submit
  </button>
</div>
`;
